# libedrawable

./: .gitignore  Makefile.am  autogen.sh  configure.ac  edrawable.pc.in  libedrawable.pc.in
debian/: changelog  control
src/: Makefile.am  api.c  blend.c  blend.h  color_helpers.c  color_helpers.h  colormod.h  common.h  drt.c  edrawable.c  edrawable.h  eimlib.h  ellipse.c  file.c  file.h  font.h  font_draw.c  font_load.c  font_main.c  font_query.c  image.c  image.h  line.c  polygon.c  rectangle.c  rgba.c  rgba.h  rgbadraw.c  rgbadraw.h  rotate.c  rotate.h  scale.c  scale.h  span.c  span.h  updates.c  updates.h
