AC_PREREQ(2.57)
AC_INIT(edrawable, 0.2, avn@daemon.hole.ru)
AM_INIT_AUTOMAKE(foreign)

AC_LANG_C
AC_PROG_CC
AM_PROG_LIBTOOL

PKG_CHECK_MODULES(FREETYPE,[freetype2])
PKG_CHECK_MODULES(EVAS,[evas])
PKG_CHECK_MODULES(ECORE,[ecore])
PKG_CHECK_MODULES(ECORE_FILE,[ecore-file])
PKG_CHECK_MODULES(ECORE_EVAS,[ecore-evas])
PKG_CHECK_MODULES(ECORE_X,[ecore-x])

AC_OUTPUT(Makefile libedrawable.pc src/Makefile)
